--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,10 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt_BR">
 <head>
   <meta charset="utf-8">
   <title>Lapig - Atlas Digital das Pastagens Brasileiras</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+
+  <link rel="canonical"         href="https://pastagem.org/"/>
+  <meta property="og:locale"    content="pt_BR"/>
+  <meta property="og:type"      content="website"/>
+  <meta property="og:title"     content="Atlas das Pastagens"/>
+  <meta property="og:url"       content="https://pastagem.org/"/>
+  <meta property="og:image"     content="https://pastagem.org/favicon.ico">
+  <meta property="og:site_name" content="Atlas das Pastagens"/>
+  <meta name="twitter:card"     content="summary_large_image"/>
+  <meta name="twitter:title"    content="Atlas das Pastagens"/>
+  <meta name="twitter:image"    content="https://pastagem.org/favicon.ico"/>
+
+  <meta name="description" content="As áreas de pastagens brasileiras ocupam aproximadamente 20% do território nacional, constituindo a maior classe de uso e cobertura da terra do Brasil.">
+  <meta name="keywords" content="pastagem, remote sensing"/>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="/assets/ol.css" rel="stylesheet">
 </head>
