--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -30,7 +30,10 @@
   <meta name="keywords" content="pastagem, remote sensing"/>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- google-fonts -->
+  <link href="" rel="stylesheet">
   <link href="/assets/ol.css" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
