--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -19,12 +19,12 @@
   <meta property="og:locale"    content="pt_BR"/>
   <meta property="og:type"      content="website"/>
   <meta property="og:title"     content="Atlas das Pastagens"/>
-  <meta property="og:url"       content="https://atlasdaspastagens.ufg.br"/>
-  <meta property="og:image"     content="https://atlasdaspastagens.ufg.br/assets/site/images/logos/logo.png">
+  <meta property="og:url"       content="https://atlas-homolog.lapig.iesa.ufg.br/"/>
+  <meta property="og:image"     content="https://atlas-homolog.lapig.iesa.ufg.br/assets/site/images/logos/logo.png">
   <meta property="og:site_name" content="Atlas das Pastagens"/>
   <meta name="twitter:card"     content="summary_large_image"/>
   <meta name="twitter:title"    content="Atlas das Pastagens"/>
-  <meta name="twitter:image"    content="https://atlasdaspastagens.ufg.br/assets/site/images/logos/logo.png"/>
+  <meta name="twitter:image"    content="https://atlas-homolog.lapig.iesa.ufg.br/assets/site/images/logos/logo.png"/>
 
   <meta name="description" content="As áreas de pastagens brasileiras ocupam aproximadamente 20% do território nacional, constituindo a maior classe de uso e cobertura da terra do Brasil.">
   <meta name="keywords" content="pastagem, remote sensing"/>
